--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "chaoxin-helper",
-  "engines": {
-  "node": "18.x"
-},
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "潮欣小幫手 - 便利商店生鮮品效期管理系統",
   "main": "server.js",
   "scripts": {
@@ -15,6 +12,8 @@
     "better-sqlite3": "^9.4.3",
     "dotenv": "^16.4.1",
     "@line/bot-sdk": "^8.0.0",
+    "@anthropic-ai/sdk": "^0.39.0",
+    "axios": "^1.6.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "uuid": "^9.0.1"
